--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1,20 +1,26 @@
 
 {
-    "Dashboard": "Dashboard",
-    "Menu": "Menu",
-    "Orders": "Orders",
-    "Tables": "Tables",
-    "Reports": "Reports",
-    "Employees": "Employees",
-    "My Account": "My Account",
-    "Theme": "Theme",
-    "Light": "Light",
-    "Dark": "Dark",
-    "System": "System",
-    "Language": "Language",
-    "Log out": "Log out",
-    "Toggle navigation menu": "Toggle navigation menu",
-    "Toggle user menu": "Toggle user menu",
+    "User (email)": "User (email)",
+    "Password": "Password",
+    "Remember me": "Remember me",
+    "Forgot your password?": "Forgot your password?",
+    "LOG IN": "LOG IN",
+    "Login Failed": "Login Failed",
+    "Invalid credentials or connection error. Please try again.": "Invalid credentials or connection error. Please try again.",
+    "The email or password are incorrect.": "The email or password are incorrect.",
+    "Email required": "Email required",
+    "Please enter your email to reset your password.": "Please enter your email to reset your password.",
+    "Recovery email sent": "Recovery email sent",
+    "Check your inbox to reset your password.": "Check your inbox to reset your password.",
+    "Error": "Error",
+    "Could not send recovery email. Please try again.": "Could not send recovery email. Please try again.",
+    "No user found with that email address.": "No user found with that email address.",
+    "Login Successful": "Login Successful",
+    "Welcome back, {{name}}!": "Welcome back, {{name}}!",
+    "The user is not active or does not have permissions.": "The user is not active or does not have permissions.",
+    "Unrecognized user profile or invalid status.": "Unrecognized user profile or invalid status.",
+    "Hide password": "Hide password",
+    "Show password": "Show password",
     "Master Admin Dashboard": "Master Admin Dashboard",
     "Welcome to the Tlacualli main control panel.": "Welcome to the Tlacualli main control panel.",
     "Registered Restaurants": "Registered Restaurants",
@@ -34,11 +40,11 @@
     "Filter by State": "Filter by State",
     "Filter by Style": "Filter by Style",
     "Register Restaurant": "Register Restaurant",
-    "Loading restaurants...": "Loading restaurants...",
     "Name": "Name",
     "Style": "Style",
     "Municipality/City": "Municipality/City",
     "State": "State",
+    "Loading restaurants...": "Loading restaurants...",
     "Open menu": "Open menu",
     "Edit": "Edit",
     "Delete": "Delete",
@@ -52,47 +58,26 @@
     "Phone": "Phone",
     "Email": "Email",
     "RFC": "RFC",
+    "Unknown": "Unknown",
+    "ID": "ID",
+    "Could not load restaurants.": "Could not load restaurants.",
     "Restaurant Deleted": "Restaurant Deleted",
     "The restaurant has been marked as inactive.": "The restaurant has been marked as inactive.",
-    "Error": "Error",
     "Could not delete the restaurant.": "Could not delete the restaurant.",
-    "Could not load restaurants.": "Could not load restaurants.",
-    "Edit Restaurant": "Edit Restaurant",
-    "Modify the restaurant information.": "Modify the restaurant information.",
-    "Search by name or email...": "Search by name or email...",
-    "Register New Master User": "Register New Master User",
-    "Register": "Register",
-    "Master User": "Master User",
-    "Modify the user information.": "Modify the user information.",
-    "Add a new master user to the system.": "Add a new master user to the system.",
-    "Loading users...": "Loading users...",
-    "Username": "Username",
-    "Registration Date": "Registration Date",
-    "This action will mark the user as inactive and they will not be able to access the system. Do you want to continue?": "This action will mark the user as inactive and they will not be able to access the system. Do you want to continue?",
-    "User Deleted": "User Deleted",
-    "The user has been marked as inactive.": "The user has been marked as inactive.",
-    "Could not delete the user.": "Could not delete the user.",
-    "No master users found.": "No master users found.",
-    "Not specified": "Not specified",
-    "Go Back": "Go Back",
-    "Add a new restaurant and its administrator to the system.": "Add a new restaurant and its administrator to the system.",
-    "Restaurant Information": "Restaurant Information",
-    "Update Successful": "Update Successful",
-    "The information for restaurant '{{name}}' has been updated.": "The information for restaurant '{{name}}' has been updated.",
-    "Update Error": "Update Error",
-    "Could not save the restaurant information.": "Could not save the restaurant information.",
-    "Saving...": "Saving...",
-    "Save Changes": "Save Changes",
-    "e.g., Tacos El Sol": "e.g., Tacos El Sol",
-    "e.g., Tacos El Sol S.A. de C.V.": "e.g., Tacos El Sol S.A. de C.V.",
-    "Select a style": "Select a style",
     "Italiano": "Italian",
-    "Mar y tierra": "Surf and turf",
+    "Mar y tierra": "Surf and Turf",
     "Carnes": "Meats",
     "Mariscos": "Seafood",
     "Mexicano": "Mexican",
     "Japonés": "Japanese",
     "Otro": "Other",
+    "Add a new restaurant and its administrator to the system.": "Add a new restaurant and its administrator to the system.",
+    "Go Back": "Go Back",
+    "Restaurant Information": "Restaurant Information",
+    "Restaurant Name": "Restaurant Name",
+    "e.g., Tacos El Sol": "e.g., Tacos El Sol",
+    "e.g., Tacos El Sol S.A. de C.V.": "e.g., Tacos El Sol S.A. de C.V.",
+    "Select a style": "Select a style",
     "e.g., Main St 123, Downtown": "e.g., Main St 123, Downtown",
     "e.g., Cuauhtémoc": "e.g., Cuauhtémoc",
     "Select a state": "Select a state",
@@ -106,28 +91,32 @@
     "Registration Successful": "Registration Successful",
     "The restaurant '{{name}}' and its administrator user have been registered.": "The restaurant '{{name}}' and its administrator user have been registered.",
     "Operation Error": "Operation Error",
-    "An error occurred during the operation.": "An error occurred during the operation.",
     "The email is already in use by another administrator.": "The email is already in use by another administrator.",
     "The password (phone) must be at least 6 characters long.": "The password (phone) must be at least 6 characters long.",
     "The email format is invalid.": "The email format is invalid.",
-    "Administrator Dashboard": "Administrator Dashboard",
-    "Manage your restaurant's operations.": "Manage your restaurant's operations.",
-    "Welcome, Administrator!": "Welcome, Administrator!",
-    "Here you can manage your menu, employees, and view reports for your restaurant.": "Here you can manage your menu, employees, and view reports for your restaurant.",
-    "View and update your restaurant details.": "View and update your restaurant details.",
-    "Edit Information": "Edit Information",
-    "Edit Restaurant Information": "Edit Restaurant Information",
-    "Update your restaurant's details. Click save when you're done.": "Update your restaurant's details. Click save when you're done.",
-    "Restaurant Name": "Restaurant Name",
-    "No restaurant associated with this account.": "No restaurant associated with this account.",
-    "The restaurant information has been updated.": "The restaurant information has been updated.",
-    "Email (not editable)": "Email (not editable)",
+    "Search by name or email...": "Search by name or email...",
+    "Register New Master User": "Register New Master User",
+    "Register": "Register",
+    "Master User": "Master User",
+    "Modify the user information.": "Modify the user information.",
+    "Add a new master user to the system.": "Add a new master user to the system.",
+    "Username": "Username",
+    "Registration Date": "Registration Date",
+    "Loading users...": "Loading users...",
+    "User Deleted": "User Deleted",
+    "The user has been marked as inactive.": "The user has been marked as inactive.",
+    "Could not delete the user.": "Could not delete the user.",
+    "This action will mark the user as inactive and they will not be able to access the system. Do you want to continue?": "This action will mark the user as inactive and they will not be able to access the system. Do you want to continue?",
+    "No master users found.": "No master users found.",
+    "Not specified": "Not specified",
     "First Name(s)": "First Name(s)",
     "e.g., Juan": "e.g., Juan",
     "Last Names": "Last Names",
     "e.g., Pérez García": "e.g., Pérez García",
+    "Phone (will be the password)": "Phone (will be the password)",
     "e.g., user@email.com": "e.g., user@email.com",
     "Save Changes": "Save Changes",
+    "Register Master User": "Register Master User",
     "User Updated": "User Updated",
     "The Master User '{{fullName}}' has been updated.": "The Master User '{{fullName}}' has been updated.",
     "Master User Registered": "Master User Registered",
@@ -136,6 +125,22 @@
     "updating": "updating",
     "registering": "registering",
     "This email is already in use.": "This email is already in use.",
+    "Administrator Dashboard": "Administrator Dashboard",
+    "Manage your restaurant's operations.": "Manage your restaurant's operations.",
+    "Welcome, Administrator!": "Welcome, Administrator!",
+    "Here you can manage your menu, employees, and view reports for your restaurant.": "Here you can manage your menu, employees, and view reports for your restaurant.",
+    "View and update your restaurant details.": "View and update your restaurant details.",
+    "Edit Information": "Edit Information",
+    "Edit Restaurant Information": "Edit Restaurant Information",
+    "Update your restaurant's details. Click save when you're done.": "Update your restaurant's details. Click save when you're done.",
+    "No restaurant associated with this account.": "No restaurant associated with this account.",
+    "Saving...": "Saving...",
+    "Update Successful": "Update Successful",
+    "The restaurant information has been updated.": "The restaurant information has been updated.",
+    "Update Error": "Update Error",
+    "Could not save the restaurant information.": "Could not save the restaurant information.",
+    "Contact phone": "Contact phone",
+    "Email (not editable)": "Email (not editable)",
     "Client Dashboard": "Client Dashboard",
     "Your personal space.": "Your personal space.",
     "Welcome!": "Welcome!",
@@ -145,34 +150,37 @@
     "Access your daily tasks and information.": "Access your daily tasks and information.",
     "Welcome, Collaborator!": "Welcome, Collaborator!",
     "View your assigned orders, tables, and other tasks for the day.": "View your assigned orders, tables, and other tasks for the day.",
-    "Login Successful": "Login Successful",
-    "Welcome back, {{name}}!": "Welcome back, {{name}}!",
-    "The user is not active or does not have permissions.": "The user is not active or does not have permissions.",
-    "Unrecognized user profile or invalid status.": "Unrecognized user profile or invalid status.",
-    "Login Failed": "Login Failed",
-    "Invalid credentials or connection error. Please try again.": "Invalid credentials or connection error. Please try again.",
-    "The email or password are incorrect.": "The email or password are incorrect.",
-    "Email required": "Email required",
-    "Please enter your email to reset your password.": "Please enter your email to reset your password.",
-    "Recovery email sent": "Recovery email sent",
-    "Check your inbox to reset your password.": "Check your inbox to reset your password.",
-    "Could not send recovery email. Please try again.": "Could not send recovery email. Please try again.",
-    "No user found with that email address.": "No user found with that email address.",
-    "User (email)": "User (email)",
-    "Password": "Password",
-    "Hide password": "Hide password",
-    "Show password": "Show password",
-    "Remember me": "Remember me",
-    "Forgot your password?": "Forgot your password?",
-    "LOG IN": "LOG IN",
+    "Toggle navigation menu": "Toggle navigation menu",
+    "Toggle user menu": "Toggle user menu",
+    "My Account": "My Account",
+    "Theme": "Theme",
+    "Light": "Light",
+    "Dark": "Dark",
+    "System": "System",
+    "Language": "Language",
     "Change Password": "Change Password",
-    "Enter your new password below. After saving, you will be logged out for security.": "Enter your new password below. After saving, you will be logged out for security.",
-    "New Password": "New Password",
-    "Confirm Password": "Confirm Password",
+    "Log out": "Log out",
     "Passwords do not match.": "Passwords do not match.",
     "Password must be at least 6 characters long.": "Password must be at least 6 characters long.",
     "Success": "Success",
     "Password updated successfully.": "Password updated successfully.",
     "Error updating password": "Error updating password",
-    "This operation is sensitive and requires recent authentication. Please log out and log back in to change your password.": "This operation is sensitive and requires recent authentication. Please log out and log back in to change your password."
+    "This operation is sensitive and requires recent authentication. Please log out and log back in to change your password.": "This operation is sensitive and requires recent authentication. Please log out and log back in to change your password.",
+    "Enter your new password below. After saving, you will be logged out for security.": "Enter your new password below. After saving, you will be logged out for security.",
+    "New Password": "New Password",
+    "Confirm Password": "Confirm Password",
+    "Dashboard": "Dashboard",
+    "Update": "Update",
+    "Edit Restaurant": "Edit Restaurant",
+    "Modify the restaurant information.": "Modify the restaurant information.",
+    "Orders": "Orders",
+    "Menu": "Menu",
+    "Staff": "Staff",
+    "Reports": "Reports",
+    "Inventory": "Inventory",
+    "Recipes": "Recipes",
+    "Kitchen": "Kitchen",
+    "Deliveries": "Deliveries",
+    "Digital Map": "Digital Map",
+    "Toggle Menu": "Toggle Menu"
 }
