--- a/public/locales/es/translation.json
+++ b/public/locales/es/translation.json
@@ -1,20 +1,26 @@
 
 {
-    "Dashboard": "Tablero",
-    "Menu": "Menú",
-    "Orders": "Pedidos",
-    "Tables": "Mesas",
-    "Reports": "Informes",
-    "Employees": "Empleados",
-    "My Account": "Mi Cuenta",
-    "Theme": "Tema",
-    "Light": "Claro",
-    "Dark": "Oscuro",
-    "System": "Sistema",
-    "Language": "Idioma",
-    "Log out": "Cerrar Sesión",
-    "Toggle navigation menu": "Alternar menú de navegación",
-    "Toggle user menu": "Alternar menú de usuario",
+    "User (email)": "Usuario (email)",
+    "Password": "Contraseña",
+    "Remember me": "Recordarme",
+    "Forgot your password?": "¿Olvidaste tu contraseña?",
+    "LOG IN": "INICIAR SESIÓN",
+    "Login Failed": "Falló el inicio de sesión",
+    "Invalid credentials or connection error. Please try again.": "Credenciales inválidas o error de conexión. Por favor, inténtalo de nuevo.",
+    "The email or password are incorrect.": "El email o la contraseña son incorrectos.",
+    "Email required": "Email requerido",
+    "Please enter your email to reset your password.": "Por favor, ingresa tu email para restablecer tu contraseña.",
+    "Recovery email sent": "Correo de recuperación enviado",
+    "Check your inbox to reset your password.": "Revisa tu bandeja de entrada para restablecer tu contraseña.",
+    "Error": "Error",
+    "Could not send recovery email. Please try again.": "No se pudo enviar el correo de recuperación. Por favor, inténtalo de nuevo.",
+    "No user found with that email address.": "No se encontró ningún usuario con ese correo electrónico.",
+    "Login Successful": "Inicio de Sesión Exitoso",
+    "Welcome back, {{name}}!": "¡Bienvenido de nuevo, {{name}}!",
+    "The user is not active or does not have permissions.": "El usuario no está activo o no tiene permisos.",
+    "Unrecognized user profile or invalid status.": "Perfil de usuario no reconocido o estado inválido.",
+    "Hide password": "Ocultar contraseña",
+    "Show password": "Mostrar contraseña",
     "Master Admin Dashboard": "Panel de Administrador Maestro",
     "Welcome to the Tlacualli main control panel.": "Bienvenido al panel de control principal de Tlacualli.",
     "Registered Restaurants": "Restaurantes Registrados",
@@ -34,11 +40,11 @@
     "Filter by State": "Filtrar por Estado",
     "Filter by Style": "Filtrar por Estilo",
     "Register Restaurant": "Registrar Restaurante",
-    "Loading restaurants...": "Cargando restaurantes...",
     "Name": "Nombre",
     "Style": "Estilo",
-    "Municipality/City": "Municipio/Alcaldía",
+    "Municipality/City": "Municipio/Ciudad",
     "State": "Estado",
+    "Loading restaurants...": "Cargando restaurantes...",
     "Open menu": "Abrir menú",
     "Edit": "Editar",
     "Delete": "Eliminar",
@@ -50,42 +56,14 @@
     "Social Reason": "Razón Social",
     "Address": "Dirección",
     "Phone": "Teléfono",
-    "Email": "Correo Electrónico",
+    "Email": "Email",
     "RFC": "RFC",
+    "Unknown": "Desconocido",
+    "ID": "ID",
+    "Could not load restaurants.": "No se pudieron cargar los restaurantes.",
     "Restaurant Deleted": "Restaurante Eliminado",
     "The restaurant has been marked as inactive.": "El restaurante ha sido marcado como inactivo.",
-    "Error": "Error",
     "Could not delete the restaurant.": "No se pudo eliminar el restaurante.",
-    "Could not load restaurants.": "No se pudieron cargar los restaurantes.",
-    "Edit Restaurant": "Editar Restaurante",
-    "Modify the restaurant information.": "Modificar la información del restaurante.",
-    "Search by name or email...": "Buscar por nombre o correo...",
-    "Register New Master User": "Registrar Nuevo Usuario Master",
-    "Register": "Registrar",
-    "Master User": "Usuario Master",
-    "Modify the user information.": "Modificar la información del usuario.",
-    "Add a new master user to the system.": "Añadir un nuevo usuario master al sistema.",
-    "Loading users...": "Cargando usuarios...",
-    "Username": "Usuario",
-    "Registration Date": "Fecha de Registro",
-    "This action will mark the user as inactive and they will not be able to access the system. Do you want to continue?": "Esta acción marcará el usuario como inactivo y no podrá acceder al sistema. ¿Deseas continuar?",
-    "User Deleted": "Usuario Eliminado",
-    "The user has been marked as inactive.": "El usuario ha sido marcado como inactivo.",
-    "Could not delete the user.": "No se pudo eliminar el usuario.",
-    "No master users found.": "No se encontraron usuarios master.",
-    "Not specified": "No especificado",
-    "Go Back": "Regresar",
-    "Add a new restaurant and its administrator to the system.": "Añade un nuevo restaurante y su administrador al sistema.",
-    "Restaurant Information": "Información del Restaurante",
-    "Update Successful": "Actualización Exitosa",
-    "The information for restaurant '{{name}}' has been updated.": "La información del restaurante '{{name}}' ha sido actualizada.",
-    "Update Error": "Error al Actualizar",
-    "Could not save the restaurant information.": "No se pudo guardar la información del restaurante.",
-    "Saving...": "Guardando...",
-    "Save Changes": "Guardar Cambios",
-    "e.g., Tacos El Sol": "ej., Tacos El Sol",
-    "e.g., Tacos El Sol S.A. de C.V.": "ej., Tacos El Sol S.A. de C.V.",
-    "Select a style": "Selecciona un estilo",
     "Italiano": "Italiano",
     "Mar y tierra": "Mar y tierra",
     "Carnes": "Carnes",
@@ -93,7 +71,14 @@
     "Mexicano": "Mexicano",
     "Japonés": "Japonés",
     "Otro": "Otro",
-    "e.g., Main St 123, Downtown": "ej., Av. Principal 123, Centro",
+    "Add a new restaurant and its administrator to the system.": "Añade un nuevo restaurante y su administrador al sistema.",
+    "Go Back": "Volver",
+    "Restaurant Information": "Información del Restaurante",
+    "Restaurant Name": "Nombre del Restaurante",
+    "e.g., Tacos El Sol": "ej., Tacos El Sol",
+    "e.g., Tacos El Sol S.A. de C.V.": "ej., Tacos El Sol S.A. de C.V.",
+    "Select a style": "Selecciona un estilo",
+    "e.g., Main St 123, Downtown": "ej., Calle Principal 123, Centro",
     "e.g., Cuauhtémoc": "ej., Cuauhtémoc",
     "Select a state": "Selecciona un estado",
     "Contact Information (Administrator)": "Información de Contacto (Administrador)",
@@ -106,27 +91,31 @@
     "Registration Successful": "Registro Exitoso",
     "The restaurant '{{name}}' and its administrator user have been registered.": "El restaurante '{{name}}' y su usuario administrador han sido registrados.",
     "Operation Error": "Error en la Operación",
-    "An error occurred during the operation.": "Ocurrió un error durante la operación.",
     "The email is already in use by another administrator.": "El email ya está en uso por otro administrador.",
     "The password (phone) must be at least 6 characters long.": "La contraseña (teléfono) debe tener al menos 6 caracteres.",
     "The email format is invalid.": "El formato del email es inválido.",
-    "Administrator Dashboard": "Panel de Administrador",
-    "Manage your restaurant's operations.": "Gestiona las operaciones de tu restaurante.",
-    "Welcome, Administrator!": "¡Bienvenido, Administrador!",
-    "Here you can manage your menu, employees, and view reports for your restaurant.": "Aquí puedes gestionar tu menú, empleados y ver reportes de tu restaurante.",
-    "View and update your restaurant details.": "Ver y actualizar los detalles de tu restaurante.",
-    "Edit Information": "Editar Información",
-    "Edit Restaurant Information": "Editar Información del Restaurante",
-    "Update your restaurant's details. Click save when you're done.": "Actualiza los detalles de tu restaurante. Haz clic en guardar cuando termines.",
-    "Restaurant Name": "Nombre del Restaurante",
-    "No restaurant associated with this account.": "No hay ningún restaurante asociado a esta cuenta.",
-    "The restaurant information has been updated.": "La información del restaurante ha sido actualizada.",
-    "Email (not editable)": "Email (no editable)",
+    "Search by name or email...": "Buscar por nombre o email...",
+    "Register New Master User": "Registrar Nuevo Usuario Master",
+    "Register": "Registrar",
+    "Master User": "Usuario Master",
+    "Modify the user information.": "Modificar la información del usuario.",
+    "Add a new master user to the system.": "Añadir un nuevo usuario master al sistema.",
+    "Username": "Usuario",
+    "Registration Date": "Fecha de Registro",
+    "Loading users...": "Cargando usuarios...",
+    "User Deleted": "Usuario Eliminado",
+    "The user has been marked as inactive.": "El usuario ha sido marcado como inactivo.",
+    "Could not delete the user.": "No se pudo eliminar el usuario.",
+    "This action will mark the user as inactive and they will not be able to access the system. Do you want to continue?": "Esta acción marcará al usuario como inactivo y no podrá acceder al sistema. ¿Deseas continuar?",
+    "No master users found.": "No se encontraron usuarios master.",
+    "Not specified": "No especificado",
     "First Name(s)": "Nombre(s)",
     "e.g., Juan": "ej., Juan",
     "Last Names": "Apellidos",
     "e.g., Pérez García": "ej., Pérez García",
     "e.g., user@email.com": "ej., usuario@email.com",
+    "Save Changes": "Guardar Cambios",
+    "Register Master User": "Registrar Usuario Master",
     "User Updated": "Usuario Actualizado",
     "The Master User '{{fullName}}' has been updated.": "El Usuario Master '{{fullName}}' ha sido actualizado.",
     "Master User Registered": "Usuario Master Registrado",
@@ -135,43 +124,62 @@
     "updating": "actualizar",
     "registering": "registrar",
     "This email is already in use.": "Este correo electrónico ya está en uso.",
+    "Administrator Dashboard": "Panel de Administrador",
+    "Manage your restaurant's operations.": "Gestiona las operaciones de tu restaurante.",
+    "Welcome, Administrator!": "¡Bienvenido, Administrador!",
+    "Here you can manage your menu, employees, and view reports for your restaurant.": "Aquí puedes gestionar tu menú, empleados y ver reportes para tu restaurante.",
+    "View and update your restaurant details.": "Ver y actualizar los detalles de tu restaurante.",
+    "Edit Information": "Editar Información",
+    "Edit Restaurant Information": "Editar Información del Restaurante",
+    "Update your restaurant's details. Click save when you're done.": "Actualiza los detalles de tu restaurante. Haz clic en guardar cuando termines.",
+    "No restaurant associated with this account.": "No hay ningún restaurante asociado a esta cuenta.",
+    "Saving...": "Guardando...",
+    "Update Successful": "Actualización Exitosa",
+    "The restaurant information has been updated.": "La información del restaurante ha sido actualizada.",
+    "Update Error": "Error de Actualización",
+    "Could not save the restaurant information.": "No se pudo guardar la información del restaurante.",
+    "Contact phone": "Teléfono de contacto",
+    "Email (not editable)": "Email (no editable)",
     "Client Dashboard": "Panel de Cliente",
     "Your personal space.": "Tu espacio personal.",
     "Welcome!": "¡Bienvenido!",
-    "View your order history, manage your payment methods, and update your profile.": "Consulta tu historial de pedidos, gestiona tus métodos de pago y actualiza tu perfil.",
+    "View your order history, manage your payment methods, and update your profile.": "Ve tu historial de pedidos, gestiona tus métodos de pago y actualiza tu perfil.",
     "View My Orders": "Ver Mis Pedidos",
     "Collaborator Dashboard": "Panel de Colaborador",
     "Access your daily tasks and information.": "Accede a tus tareas e información diaria.",
     "Welcome, Collaborator!": "¡Bienvenido, Colaborador!",
-    "View your assigned orders, tables, and other tasks for the day.": "Consulta tus pedidos asignados, mesas y otras tareas del día.",
-    "Login Successful": "Inicio de Sesión Exitoso",
-    "Welcome back, {{name}}!": "¡Bienvenido de nuevo, {{name}}!",
-    "The user is not active or does not have permissions.": "El usuario no está activo o no tiene permisos.",
-    "Unrecognized user profile or invalid status.": "Perfil de usuario no reconocido o estado inválido.",
-    "Login Failed": "Falló el Inicio de Sesión",
-    "Invalid credentials or connection error. Please try again.": "Credenciales inválidas o error de conexión. Por favor, inténtalo de nuevo.",
-    "The email or password are incorrect.": "El correo o la contraseña son incorrectos.",
-    "Email required": "Email requerido",
-    "Please enter your email to reset your password.": "Por favor, introduce tu email para restablecer tu contraseña.",
-    "Recovery email sent": "Correo de recuperación enviado",
-    "Check your inbox to reset your password.": "Revisa tu bandeja de entrada para restablecer tu contraseña.",
-    "Could not send recovery email. Please try again.": "No se pudo enviar el correo de recuperación. Por favor, inténtalo de nuevo.",
-    "No user found with that email address.": "No se encontró ningún usuario con esa dirección de correo.",
-    "User (email)": "Usuario (email)",
-    "Password": "Contraseña",
-    "Hide password": "Ocultar contraseña",
-    "Show password": "Mostrar contraseña",
-    "Remember me": "Recordarme",
-    "Forgot your password?": "¿Olvidaste tu contraseña?",
-    "LOG IN": "INICIAR SESIÓN",
+    "View your assigned orders, tables, and other tasks for the day.": "Ve tus pedidos asignados, mesas y otras tareas del día.",
+    "Toggle navigation menu": "Alternar menú de navegación",
+    "Toggle user menu": "Alternar menú de usuario",
+    "My Account": "Mi Cuenta",
+    "Theme": "Tema",
+    "Light": "Claro",
+    "Dark": "Oscuro",
+    "System": "Sistema",
+    "Language": "Idioma",
     "Change Password": "Cambiar Contraseña",
-    "Enter your new password below. After saving, you will be logged out for security.": "Introduce tu nueva contraseña a continuación. Después de guardar, se cerrará tu sesión por seguridad.",
-    "New Password": "Nueva Contraseña",
-    "Confirm Password": "Confirmar Contraseña",
+    "Log out": "Cerrar sesión",
     "Passwords do not match.": "Las contraseñas no coinciden.",
     "Password must be at least 6 characters long.": "La contraseña debe tener al menos 6 caracteres.",
     "Success": "Éxito",
     "Password updated successfully.": "Contraseña actualizada exitosamente.",
     "Error updating password": "Error al actualizar la contraseña",
-    "This operation is sensitive and requires recent authentication. Please log out and log back in to change your password.": "Esta operación es sensible y requiere autenticación reciente. Por favor, cierra sesión y vuelve a iniciarla para cambiar tu contraseña."
+    "This operation is sensitive and requires recent authentication. Please log out and log back in to change your password.": "Esta operación es sensible y requiere autenticación reciente. Por favor, cierra sesión y vuelve a iniciarla para cambiar tu contraseña.",
+    "Enter your new password below. After saving, you will be logged out for security.": "Ingresa tu nueva contraseña a continuación. Después de guardar, se cerrará tu sesión por seguridad.",
+    "New Password": "Nueva Contraseña",
+    "Confirm Password": "Confirmar Contraseña",
+    "Dashboard": "Panel",
+    "Update": "Actualizar",
+    "Edit Restaurant": "Editar Restaurante",
+    "Modify the restaurant information.": "Modificar la información del restaurante.",
+    "Orders": "Pedidos",
+    "Menu": "Menú",
+    "Staff": "Personal",
+    "Reports": "Reportes",
+    "Inventory": "Inventario",
+    "Recipes": "Recetas",
+    "Kitchen": "Cocina",
+    "Deliveries": "Entregas",
+    "Digital Map": "Mapa Digital",
+    "Toggle Menu": "Alternar Menú"
 }
